--- a/app/src/main/res/layout/activity_edit_login.xml
+++ b/app/src/main/res/layout/activity_edit_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.EditLoginActivity">
+    tools:context="com.nandaadisaputra.crud.activity.EditLoginActivity">
 
     <TextView
         android:id="@+id/titleLogin"
