--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     android:layout_centerInParent="true"
     android:background="@android:color/holo_blue_dark"
     android:gravity="center"
-    tools:context=".splash.SplashScreenActivity">
+    tools:context="com.nandaadisaputra.crud.splash.SplashScreenActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/profileImage"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/maysaroh_niken_ayu_saraswati"
+        android:text="@string/app_name"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="@dimen/_14ssp"
